/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

option java_package = "org.apache.reef.io.network.proto";
option java_outer_classname = "ReefNetworkGroupCommProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message GroupCommMessage {
  enum Type { 
  	Scatter=1; 
  	Gather=2; 
  	Broadcast=3; 
  	Reduce=4; 
  	AllGather=5; 
  	AllReduce=6; 
  	ReduceScatter=7; 
  	SourceDead=8; 
  	SourceAdd=9; 
  	ParentAdd=10; 
  	ChildAdd=11;
  	ParentDead=12; 
  	ChildDead=13;
  	ParentAdded=14; 
  	ChildAdded=15;
  	ParentRemoved=16; 
  	ChildRemoved=17;
  	TopologySetup=18;
  	UpdateTopology=19;
  	TopologyUpdated=20;
  	TopologyChanges=21;
  }

  // identifies which field is filled in
  required Type type = 1;
  
  required string srcid = 2;
  required string destid = 3;
  optional string groupname = 4;
  optional string operatorname = 5;
  optional int32 version = 6;
  optional int32 srcVersion = 7;
  repeated GroupMessageBody msgs = 8;
}

message GroupMessageBody {
  required bytes data = 1;
}
